--- a/style.css
+++ b/style.css
@@ -6,22 +6,87 @@
 }
 body {
     font-family: Arial, sans-serif;
-    background: #f5f5f5;
-    margin: 0;
-    padding: 0;
-}
-
-header {
+    background-image: url(assets/background/fondbleu.png);
+    background-size: cover;
+    background-position: center;   
+    background-repeat: no-repeat;
     height: 100vh;
     width: 100vw;
-    background-image: url(assets/logo/fondpuissance4.png);
-    background-size: cover;
 }
 
 .navbar {
     position: absolute;
-    margin: 50px;
+    padding: 50px;
     display: flex;
-    
-
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    box-sizing: border-box;
 }
+.logo img {
+    height: 200px;
+    width: auto;
+}
+
+.navbar .nav-links ul {
+    display: flex;
+}
+
+.navbar .nav-links ul li {
+   margin: 0 25px;
+}
+
+.navbar .nav-links ul li.active a {
+   color: #ed3c57;
+   font-weight: 600;
+}
+
+.navbar a {
+    color:#020202;
+}
+.main-content {
+    margin-top: 50px;
+}
+
+.main-content h1 {
+    font-size: 2rem;
+    color: #000000;
+}
+
+
+.center-screen {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80vh; 
+  flex-direction: column;
+  text-align: center;
+  padding: 10px;
+}
+
+.center-screen .btn {
+  font-size: 1.2rem;
+  padding: 0.8rem 1.5rem;
+  margin-top: 1rem;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0,0,0,0.2);
+  background-color: #ed3c57;
+  
+}
+
+.container {
+    padding: 40px;
+}
+
+
+.score-table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+.score-table th, .score-table td {
+    border: 1px solid #333;
+    padding: 10px;
+    text-align: center;
+}
+
