--- a/templates/règle.html
+++ b/templates/règle.html
@@ -1,21 +1,22 @@
+{{define "règle"}}
 <!DOCTYPE html>
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
   <title>Règles du jeu</title>
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
 
   <nav class="navbar">
     <div class="logo">
-      <a href="../index.html"><img src="/assets/logo/logo puissance 4.png" alt="Puissance4"></a>
+      <a href="templates/index.html"><img src="/assets/logo/logo puissance 4.png" alt="Puissance4"></a>
     </div>
     <div class="nav-links">
       <ul>
-        <li><a href="../index.html">Accueil</a></li>
-        <li class="active"><a href="rules.html">Règles</a></li>
-        <li><a href="game_scoreboard.html">Scoreboard</a></li>
+        <li><a href="templates/index.html">Accueil</a></li>
+        <li class="active"><a href="templates/règle.html">Règles</a></li>
+        <li><a href="templates/scoreboard.html">Scoreboard</a></li>
       </ul>
     </div>
   </nav>
@@ -28,8 +29,9 @@
       <li>Le premier à aligner 4 jetons gagne.</li>
       <li>Si la grille est pleine sans gagnant, c’est une égalité.</li>
     </ul>
-    <a class="btn" href="game_init.html">Commencer une partie</a>
+    <a class="btn" href="templates/init.html">Commencer une partie</a>
   </div>
 
 </body>
 </html>
+{{end}}
