--- a/templates/scoreboard.html
+++ b/templates/scoreboard.html
@@ -1,9 +1,10 @@
+{{define "scoreboard"}}
 <!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
     <title>Scoreboard</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
 
@@ -33,9 +34,10 @@
     </table>
 
     <br>
-    <a href="index.html">Retour à l’accueil</a>
+    <a href="templates/index.html">Retour à l’accueil</a>
 
 </div>
 
 </body>
 </html>
+{{end}}
