--- a/templates/index.html
+++ b/templates/index.html
@@ -4,17 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/style.css">
+    <link rel="stylesheet" href="/static/style.css">
      <title>Puissance 4</title>
 </head>
 <body>
     <header class="bandeau">
-        <img src="/assets/logo/logo.png" alt="logo" class="logo">
+        <img src="/static/logo/logo.png" alt="logo" class="logo">
     </header>
     <h1>Puissance 4</h1>
-    <form action="/templates/init.html" method="GET">
-        <button type="submit">Commencer une partie</button>
-    </form>
+        <a href="/templates/init">Commencer une partie</a>
 
     <form action="/templates/scoreboard.html" method="GET">
         <button type="submit">Voir le scoreboard</button>
