--- a/templates/regle.html
+++ b/templates/regle.html
@@ -1,22 +1,22 @@
-{{define "règle"}}
+{{define "regle"}}
 <!DOCTYPE html>
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
   <title>Règles du jeu</title>
-  <link rel="stylesheet" href="assets/style.css">
+  <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
 
   <nav class="navbar">
     <div class="logo">
-      <a href="templates/index.html"><img src="/assets/logo/logo puissance 4.png" alt="Puissance4"></a>
+      <a href="/templates/index.html"><img src="/assets/logo/logo puissance 4.png" alt="Puissance4"></a>
     </div>
     <div class="nav-links">
       <ul>
-        <li><a href="templates/index.html">Accueil</a></li>
-        <li class="active"><a href="templates/règle.html">Règles</a></li>
-        <li><a href="templates/scoreboard.html">Scoreboard</a></li>
+        <li><a href="/templates/index.html">Accueil</a></li>
+        <li class="active"><a href="/templates/regle.html">Règles</a></li>
+        <li><a href="/templates/scoreboard.html">Scoreboard</a></li>
       </ul>
     </div>
   </nav>
@@ -29,7 +29,7 @@
       <li>Le premier à aligner 4 jetons gagne.</li>
       <li>Si la grille est pleine sans gagnant, c’est une égalité.</li>
     </ul>
-    <a class="btn" href="templates/init.html">Commencer une partie</a>
+    <a class="btn" href="/templates/init.html">Commencer une partie</a>
   </div>
 
 </body>
