--- a/templates/play.html
+++ b/templates/play.html
@@ -4,35 +4,41 @@
 <head>
   <meta charset="UTF-8">
   <title>Puissance 4</title>
-  <link rel="stylesheet" href="/assets/style.css">
+  <link rel="stylesheet" href="/static/grille.css">
 </head>
 <body>
-     <h1>Puissance 4</h1>
+
+    <h1>Puissance 4</h1>
     <p class="message">{{.Message}}</p>
 
     <!-- Tour actuel -->
     <span>Tour actuel :</span>
-    {{if eq .CurrentPlayer "rouge"}}
+
+    {{if eq .JoueurActuel "rouge"}}
     <div class="player-box">
-        <div class="player-form"><span>{{.Player1.Pseudo}}</span></div>
+        <div class="player-form"><span>{{.Joueur1.Pseudo}}</span></div>
         <div class="color-display rouge"></div>
     </div>
-    {{else if eq .CurrentPlayer "jaune"}}
+
+    {{else if eq .JoueurActuel "jaune"}}
     <div class="player-box">
-        <div class="player-form"><span>{{.Player2.Pseudo}}</span></div>
+        <div class="player-form"><span>{{.Joueur2.Pseudo}}</span></div>
         <div class="color-display jaune"></div>
     </div>
-    {{else if eq .CurrentPlayer "bleu"}}
+
+    {{else if eq .JoueurActuel "bleu"}}
     <div class="player-box">
-        <div class="player-form"><span>{{.Player1.Pseudo}}</span></div>
+        <div class="player-form"><span>{{.Joueur1.Pseudo}}</span></div>
         <div class="color-display bleu"></div>
     </div>
-    {{else if eq .CurrentPlayer "vert"}}
+
+    {{else if eq .JoueurActuel "vert"}}
     <div class="player-box">
-        <div class="player-form"><span>{{.Player2.Pseudo}}</span></div>
+        <div class="player-form"><span>{{.Joueur2.Pseudo}}</span></div>
         <div class="color-display vert"></div>
     </div>
     {{end}}
+
     <span>(Tour n°{{.Tour}})</span>
 
     <h2>Grille de jeu :</h2>
@@ -40,8 +46,16 @@
         {{range $i, $row := .Grille}}
         <tr>
             {{range $j, $cell := $row}}
-            <td class="{{if eq $cell "rouge"}}rouge{{else if eq $cell "jaune"}}jaune{{else if eq $cell "bleu"}}bleu{{else if eq $cell "vert"}}vert{{else}}vide{{end}}">
-                {{if eq $cell "rouge"}}X{{else if eq $cell "jaune"}}O{{else if eq $cell "bleu"}}B{{else if eq $cell "vert"}}V{{else}}&nbsp;{{end}}
+            <td class="{{if eq $cell "rouge"}}rouge
+                       {{else if eq $cell "jaune"}}jaune
+                       {{else if eq $cell "bleu"}}bleu
+                       {{else if eq $cell "vert"}}vert
+                       {{else}}vide{{end}}">
+                {{if eq $cell "rouge"}}X
+                {{else if eq $cell "jaune"}}O
+                {{else if eq $cell "bleu"}}B
+                {{else if eq $cell "vert"}}V
+                {{else}}&nbsp;{{end}}
             </td>
             {{end}}
         </tr>
@@ -50,12 +64,13 @@
 
     {{if .Fin}}
     <h2>La partie est terminée !</h2>
-    <form action="/templates/init.html" method="GET">
+    <form action="/templates/init" method="GET">
         <button type="submit">Recommencer une partie</button>
     </form>
+
     {{else}}
     <h2>Choisissez une colonne :</h2>
-    <form action="/templates/play.html/traitement" method="POST">
+    <form action="/templates/play/traitement" method="POST">
         {{range $j := seq 0 6}}
         <button type="submit" name="colonne" value="{{$j}}">{{$j}}</button>
         {{end}}
@@ -64,6 +79,7 @@
 
     <a href="/">Retour à l'accueil</a><br>
     <a href="/scoreboard" class="btn-scoreboard">Voir le scoreboard</a>
+
 </body>
 </html>
 {{end}}
